# autonomyhq

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  render.yaml  start.bat
.github/: pull_request_template.md
apps/data-mesh-gateway/: Dockerfile  package-lock.json  package.json
apps/data-mesh-gateway/src/: mcp_router.js  prove_x402.js  server.js  x402.js
apps/enterprise-frontend/: Dockerfile  index.html  package.json  serve.js
apps/enterprise-frontend/app/: layout.js  page.js
apps/enterprise-frontend/public/: engine.js  world.js
apps/enterprise-frontend/public/sprites/: gen_sprites.py  sprite_risk.json
apps/office/: ATTRIBUTION.md  athanor-bridge.mjs  package-lock.json  package.json
apps/office/mission-control/: index.html  serve.cjs
apps/swarm-orchestrator/: Dockerfile  main.py  prove_swarm.py  requirements.txt
apps/swarm-orchestrator/agents/: base.py  consensus.py  reasoning.py  swarm_agents.py
contracts/: APPLY.txt  Cargo.toml  Odra.toml  llms.txt
contracts/src/: lib.rs  treasury.rs
deploy-kit/: chain-recorder.mjs  deploy.mjs  package-lock.json  package.json
scripts/: deploy_testnet.sh  run_all.sh
shared/schemas/: swarm_proposal_event.json
