[package]
name = "athanor-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.4.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "2.4.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.4.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.4.0" }

[[bin]]
name = "athanor_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "athanor_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = []
